--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -20,9 +20,28 @@
 
     <title>{% block title %}{% endblock %} - Open Broadway Data</title>
     {% endblock %}
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-177940998-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('some_variable', 'foo');
+      gtag('config', 'UA-177940998-1');
+    </script>
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-5PX7SSZ');</script>
+    <!-- End Google Tag Manager -->
+
   </head>
 
   <body>
+
     {% block background_image %}{% endblock %}
     <!-- Create a header for nav -->
     <div class="navigation" id="myHeader">
@@ -117,4 +136,12 @@
       {% endblock %}
     </div>
   </body>
+
+  <footer>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5PX7SSZ"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+  </footer>
+
 </html>
