fixed flex of the menu too.

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -48,10 +48,10 @@
 
     <!-- Only if logged in -->
     {% if current_user.is_authenticated %}
-          <div class="home">
+          <div class="navigation-left">
             <a href="/">Home</a>
           </div>
-          <div class="navgroup">
+          <div class="navigation-right">
             <div class="menu">
               <a href="/settings">Settings</a>
 
