--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -55,20 +55,25 @@ body{
   padding:20px;
   line-height: 1.0;
   display:flex;
-  flex-direction: column;
+  align-items: center;
+  flex-wrap: wrap;
+  align-items: center;
   justify-content: space-between;
 }
 
-.navgroup{
+
+.navigation-left{
+ display: flex;
+ flex-direction: column;
+ align-items: flex-start;
+}
+
+.navigation-right{
   display:flex;
   flex-direction: column;
- align-items: flex-end;
+  align-items: flex-end;
 }
-/* .navigation .home{
- margin-right: auto;
-  display: flex;
- justify-content: flex-start;
-} */
+
 .navigation a{
     padding:0 10px;
     color:white;
@@ -136,6 +141,10 @@ body{
   width: -moz-calc(100% - 40px);
   width: calc(100% - 40px);
 }
+
+
+
+
 
 h1{
   font-weight: 400;
