--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -16,6 +16,7 @@ body{
   margin:0;
   font: normal medium/1.4 sans-serif;
 }
+
 .page-content{
   padding: 20px;
 }
@@ -32,7 +33,7 @@ body{
   right: 0;
 
   /* Set a specific height */
-  height: 125%;
+  height: 100%%;
 
   /* Create the parallax scrolling effect */
   background-position: center top;
@@ -220,10 +221,37 @@ h3{
 
 /*  The footer  */
 #footer{
+  color:white;
   font-size: 10px;
-  margin:20px 0 10px 2vw;
+  padding:10px 20px 10px 20px;
+  background: rgb(0, 0, 0, 0.5);
+  position:absolute;
+  bottom:0;
+
+  /* Adjust for margin */
+  height: 50px;
+  width: -webkit-calc(100%);
+  width: -moz-calc(100%);
+  width: calc(100%);
+
+
+}
+#footer a:link, #footer a:visited{
+  color: white;
+}
+#footer a:hover{
+  background-color: white;
+  color:grey;
 }
 
+
+/* Format Links */
+.page-content a:link, .page-content a:visited{
+  color: mediumblue;
+}
+.page-content a:hover{
+  font-weight:bold;
+}
 
 /* Style your buttons */
 button, input[type="submit"]{
