--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -135,7 +135,7 @@
     <!-- Footer... -->
     <div id="footer">
       {% block footer %}
-      &copy; Copyright 2020 by <a href="https://github.com/Broadway-Open-Data">Open Broadway Data</a>.
+      &copy; Copyright 2020 by <a href="https://github.com/Broadway-Open-Data" target="_blank">Open Broadway Data</a>.
       {% endblock %}
     </div>
   </body>
