made the page and allow routing to it. #41

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -50,9 +50,7 @@
     <!-- Only if logged in -->
     {% if current_user.is_authenticated %}
           <div class="navigation-left">
-            <a href="/">
-              <img src="{{ url_for('static', filename='logo/open-broadway-data-logo.png') }}" style="width:150px;">
-            </a>
+            <a href="/"><img src="{{ url_for('static', filename='logo/open-broadway-data-logo.png') }}" style="width:150px;"></a>
           </div>
           <div class="navigation-right">
             <div class="menu">
@@ -90,9 +88,10 @@
             <a href="/signup">Signup</a>
             <a href="/login">Login</a>
             <a href="/login/forgot-password">Forgot Password</a>
+            <a class-"special" href="/about">About<a>
           </div>
         {% else %}
-            <a href="/">Home</a>
+            <a href="/"><img src="{{ url_for('static', filename='logo/open-broadway-data-logo.png') }}" style="width:150px;"></a>
         {% endif %}
     {% endif %}
 
