--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -268,6 +268,11 @@ h3{
   font-weight:bold;
 }
 
+/* Make a glowing link... */
+a.special{
+  /* Do next... */
+}
+
 /* Style your buttons */
 button, input[type="submit"]{
   border: none;
