--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -88,7 +88,7 @@
             <a href="/signup">Signup</a>
             <a href="/login">Login</a>
             <a href="/login/forgot-password">Forgot Password</a>
-            <a class-"special" href="/about">About<a>
+            <a href="/about"><span class="special">About</span><a>
           </div>
         {% else %}
             <a href="/"><img src="{{ url_for('static', filename='logo/open-broadway-data-logo.png') }}" style="width:150px;"></a>
