--- a/app/templates/about/contributors.html
+++ b/app/templates/about/contributors.html
@@ -4,10 +4,10 @@
 {% block content %}
 
   <h1>{{ title }}</h1>
-  <p>Yaakov Bressler: Founder, Software Development
+  <p>Yaakov Bressler: Software Development
     <br>Warren Adams: Collaborator
     <br>Stanislav Levitt: Software Development
-    <br>Nikhil Kamat: Software Development Intern
-    <br>Jocelyn Shek: UX and UI Design Intern
+    <br>Nikhil Kamat: Software Development
+    <br>Jocelyn Shek: UX and UI Design
   </p>
 {% endblock %}
