Updated contributor titles.

--- a/app/templates/about/contributors.html
+++ b/app/templates/about/contributors.html
@@ -4,10 +4,10 @@
 {% block content %}
 
   <h1>{{ title }}</h1>
-  <p>Yaakov Bressler: Software Development
-    <br>Warren Adams: Collaborator
-    <br>Stanislav Levitt: Software Development
-    <br>Nikhil Kamat: Software Development
-    <br>Jocelyn Shek: UX and UI Design
+  <p>Yaakov Bressler (Product, Engineering)
+    <br>Warren Adams (Product)
+    <br>Stanislav Levitt (Engineering)
+    <br>Nikhil Kamat (Engineering, Research)
+    <br>Jocelyn Shek (UX & UI Design, Research)
   </p>
 {% endblock %}
