fixed a whole bunch with the radio buttons. #38

--- a/app/templates/settings/settings.html
+++ b/app/templates/settings/settings.html
@@ -23,7 +23,7 @@
 
 
     <div class='status'> You are viewing the data in
-          <div id='view_mode' style="display:inline; font-weight:bold;">
+          <div id='view-mode' style="display:inline; font-weight:bold;">
             {% if current_user.view_mode==0%}
               Interested
             {% elif current_user.view_mode==1%}
