allow index to be referenced

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -91,7 +91,7 @@
 
     <!-- If not logged in -->
     {% else %}
-        {% if request.endpoint == 'index' %}
+        {% if request.endpoint == 'index.index' %}
         <div class="notLoggedin">
             <a href="/signup">Signup</a>
             <a href="/login">Login</a>
