--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -26,8 +26,38 @@
 
 <!-- Only show the following to those who are authenticated -->
 
+{% if current_user.view_mode==0%}                                                                      <!-- Interested Mode -->
+    <div class="info">
+        <h2>Hello there interested person!</h2>
+        <h3>Data can be accessed in one of two ways:</h3>
+        <ol>
+          <li>
+            <b>Analyze:</b><br>
+            Request directly.
+          </li><br>
+          <li>
+            <b>Explore:</b><br>
+              Explore prepoluated interactive dashboards, made by our volunteer editing team.
+          </li
+        </ol>
+    </div>
 
-{% if current_user.view_mode==0 or current_user.view_mode==1 %}                                        <!-- Analyst Mode -->
+    <div class="section">
+          <h2>Analyze</h2>
+          <p>
+            Request directly from the OBD database.
+          </p>
+          <a href="/analyze/get-data/"><button>Get Data</button></a><br>
+          <h2>Explore</h2>
+          <p>
+            Explore prepoluated interactive dashboards, made by our volunteer editing team.
+          </p>
+          <a href="/analyze/explore/"><button>Explore</button></a><br>
+    </div>
+
+
+
+{% elif current_user.view_mode==1%}                                                                      <!-- Analyst Mode -->
     <div class="info">
         <h3>Data can be accessed in one of two ways:</h3>
         <ol>
