adding links to about page

--- a/app/templates/about/contributors.html
+++ b/app/templates/about/contributors.html
@@ -3,11 +3,14 @@
 
 {% block content %}
 
+
   <h1>{{ title }}</h1>
-  <p>Yaakov Bressler (Product, Engineering)
-    <br>Warren Adams (Product)
-    <br>Stanislav Levitt (Engineering)
-    <br>Nikhil Kamat (Engineering, Research)
-    <br>Jocelyn Shek (UX & UI Design, Research)
-  </p>
+  <div class="subtitle">Open Broadway Data is a non-profit and open source initiative. All contributions are volunteers.</div>
+  <ul>
+    <li><a href="http://yaakovbressler.com/">Yaakov Bressler</a> (Product, Engineering)</li>
+    <li><a href="https://about.me/warrenadams">Warren Adams</a> (Product)</li>
+    <li><a href="https://www.linkedin.com/in/stanislavlevitt/">Stanislav Levitt</a> (Engineering)</li>
+    <li><a href="https://nikhilkamat.com/">Nikhil Kamat</a> (Engineering, Research)</li>
+    <li><a href="https://www.linkedin.com/in/jocelyn-shek-1b881a1a5/">Jocelyn Shek</a> (UX & UI Design, Research)</li>
+  </ul>
 {% endblock %}
