--- a/app/templates/about/about_us.html
+++ b/app/templates/about/about_us.html
@@ -7,5 +7,8 @@
   <p>
     Open Broadway Data is an open source & open data platform which aims to collect, display, and analyze data from all Broadway shows since 1738 with the ultimate goal of helping researchers, activists, and journalists make Broadway the best it can be.
   </p>
+  <p>
+    We especially focus on providing data on the representation of minorities in decision making roles on Broadway, with self-submitted details about theatre professionals available.
+  </p>
   <a href="/about/contributors">Contributors<a>
 {% endblock %}
