cleaned up toggle status. Also, added db schema on sql advanved page. #46

--- a/app/templates/advanced/get-data.html
+++ b/app/templates/advanced/get-data.html
@@ -9,6 +9,10 @@
     /get-data-advanced/sql/
   </pre>
 
+  <h3>Data Schema</h3>
+  <div class="data-schema">
+    {{ data_schema }}
+  </div>
   <h3>Alternatively, you can write your SQL query below:</h3>
   <pre>
     <b>sql Query:</b>
