added about page to logged in users. This is technical debt... #49

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -60,7 +60,8 @@
                 {% if current_user.is_admin() %}
                     <a href="/admin">Admin</a>
                 {% endif %}
-
+                <a href="/about"><span class="special">About</span><a>
+                  
                 <a href="/logout">Logout</a>
             </div>
             <div class="meta">
