--- a/app/templates/people/people-index.html
+++ b/app/templates/people/people-index.html
@@ -9,6 +9,7 @@
   </p>
   <ul>
       <li><a href="view-people">View People</a></li>
-      <li><a href="add-data">Add Data</a></li>
+      <li><a href="contribute">Contribute</a></li>
+      <li><a href="review">Review and Approve (Admin and Editors)</a></li>
   </ul>
 {% endblock %}
