--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -38,7 +38,7 @@
           <li>
             <b>Explore:</b><br>
               Explore prepoluated interactive dashboards, made by our volunteer editing team.
-          </li
+          </li>
         </ol>
     </div>
 
@@ -116,6 +116,15 @@
 
 {% endif %}
 
+<!-- Show people link, though may not be valid for those who do not have access -->
+<div class="section">
+      <h2>People Data</h2>
+      <p>
+        Data will only be viewable to those with special access. If you would like
+        access to this feature, give us a holler.
+      </p>
+      <a href="/people/"><button>People Data</button></a><br>
+</div>
 
 {% elif current_user.id %}
 <!--Show to users who aren't approved yet (but are signed in)-->
