--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,7 +13,8 @@
   <!-- Floating Module -->
 <div class="floating-module">
     <div class="info">
-        <img id="logo" src="{{ url_for('static', filename='logo/open-broadway-data-logo.png') }}" alt="Open Broadway Data Logo">
+        <!-- <img id="logo" src="{{ url_for('static', filename='logo/open-broadway-data-logo.png') }}" alt="Open Broadway Data Logo"> -->
+        <img id="logo" src="/static/logo/open-broadway-data-logo.png" alt="Open Broadway Data Logo">
         <h2>Welcome to this Open Broadway Data!</h2>
         <p>This tool will allow you to access the data for
            every Broadway show since 1738.
