--- a/app/templates/people/query.html
+++ b/app/templates/people/query.html
@@ -12,9 +12,13 @@
             <div>{{ form.person_f_name.label }} {{ form.person_f_name(size=10) }}</div>
             <div>{{ form.person_m_name.label }} {{ form.person_m_name(size=10) }}</div>
             <div>{{ form.person_l_name.label }} {{ form.person_l_name(size=10) }}</div>
+            <div>{{ form.role_name.label }} {{ form.role_name(size=10) }}</div>
             <div>{{ form.shows_title.label }} {{ form.shows_title(size=10) }}</div>
             <div>{{ form.shows_year.label }} {{ form.shows_year(size=10) }}</div>
-            <div>{{ form.role_name.label }} {{ form.role_name(size=10) }}</div>
+            <div class="advanced">
+                <div>{{ form.shows_year_from.label }} {{ form.shows_year_from(size=10) }}</div>
+                <div>{{ form.shows_year_to.label }} {{ form.shows_year_to(size=10) }}</div>
+            </div>
             <input type="submit" value="Submit"/>
         </form>
   </div>
