--- a/app/templates/people/query.html
+++ b/app/templates/people/query.html
@@ -15,7 +15,9 @@
             <div>{{ form.role_name.label }} {{ form.role_name(size=10) }}</div>
             <div>{{ form.shows_title.label }} {{ form.shows_title(size=10) }}</div>
             <div>{{ form.shows_year.label }} {{ form.shows_year(size=10) }}</div>
-            <div class="advanced">
+
+            <div class="advanced-label" id="data-query-advanced-label">Advanced Options</div>
+            <div class="advanced" id="data-query-advanced" style="display:none;">
                 <div>{{ form.shows_year_from.label }} {{ form.shows_year_from(size=10) }}</div>
                 <div>{{ form.shows_year_to.label }} {{ form.shows_year_to(size=10) }}</div>
             </div>
