--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -22,8 +22,13 @@
     <title>{% block title %}{% endblock %} - Open Broadway Data</title>
     {% endblock %}
 
+    <!-- Load yo icons -->
+    <script async src="https://use.fontawesome.com/releases/v5.15.1/js/all.js"></script>
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-177940998-1"></script>
+
+    </script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
