--- a/app/templates/people/query.html
+++ b/app/templates/people/query.html
@@ -15,9 +15,9 @@
             <div>{{ form.shows_title.label }} {{ form.shows_title(size=10) }}</div>
             <div>{{ form.shows_year.label }} {{ form.shows_year(size=10) }}</div>
 
-            <div class="advanced" id="data-query-advanced">
-              <div class="advanced-label" id="data-query-advanced-label">Advanced Options  <i class="fas fa-wrench"></i></div>
-                  <div id="data-query-advanced-content" style="display:none;">
+            <div class="advanced" id="advanced-data-query">
+              <div class="advanced-label" id="advanced-data-query-label">Advanced Options  <i class="fas fa-wrench"></i></div>
+                  <div id="advanced-data-query-content" style="display:none;">
                     <div>{{ form.shows_year_from.label }} {{ form.shows_year_from(size=10) }}</div>
                     <div>{{ form.shows_year_to.label }} {{ form.shows_year_to(size=10) }}</div>
                 </div>
