--- a/app/static/css/forms.css
+++ b/app/static/css/forms.css
@@ -100,6 +100,14 @@ form .submit{
 
 
 
+/* For form adjacent properties */
+.list-options{
+  margin-left: 30px;
+  margin-right: 30px;
+  font-size: 11px;
+}
+
+
 
 
 
