Adding language for contribute page. #53

--- a/app/templates/people/contribute.html
+++ b/app/templates/people/contribute.html
@@ -5,6 +5,10 @@
 
   <h1>{{ title }}</h1>
   <p>
-    Coming soon...
+    Because there are over 100,000 people in our database (some of which may be repeats),
+    we've opted to limit our scope by first focusing on <b>directors only</b>.
+  </p>
+  <p>
+    Below, you will find data for all directors going back to 1800.
   </p>
 {% endblock %}
