some small light changes. #53

--- a/app/templates/people/contribute.html
+++ b/app/templates/people/contribute.html
@@ -11,4 +11,12 @@
   <p>
     Below, you will find data for all directors going back to 1800.
   </p>
+
+  <h2>Data</h2>
+  <p>
+    Here it is...
+  </p>
+  {{ data|safe }}
+
+
 {% endblock %}
