--- a/app/templates/people/contribute.html
+++ b/app/templates/people/contribute.html
@@ -16,7 +16,9 @@
   <p>
     Here it is...
   </p>
-  {{ data|safe }}
+  <div class="table-container" style="max-height:750px;">
+      {{ data|safe }}
+  </div>
 
 
 {% endblock %}
