fixed css. Now it works nicely. #53

--- a/app/templates/people/contribute.html
+++ b/app/templates/people/contribute.html
@@ -16,13 +16,13 @@
   <p>
     Here it is...
   </p>
-  <div class="two-columns">
+  <div class="flex-columns">
 
-      <div class="table-container column-75pct" style="max-height:750px;">
+      <div class="table-container column tall-container" style="flex: 3;">
           {{ data|safe }}
       </div>
 
-      <div class="form-container column-25pct" style="max-height:750px;">
+      <div class="form-container column tall-container" style="flex: 1; padding-left:25px;">
           <p>THIS IS WHERE THE FORM WILL GO</p>
       </div>
 
