--- a/app/templates/people/people-index.html
+++ b/app/templates/people/people-index.html
@@ -8,7 +8,7 @@
     View People
   </p>
   <ul>
-      <li><a href="view-people">View People</a></li>
+      <!-- <li><a href="view-people">View People</a></li> -->
       <li><a href="query">Query (get specific data)</a></li>
       <li><a href="contribute">Contribute</a></li>
       <li><a href="review">Review and Approve (Admin and Editors)</a></li>
