--- a/app/templates/people/people-index.html
+++ b/app/templates/people/people-index.html
@@ -10,7 +10,7 @@
   <ul>
       <!-- <li><a href="view-people">View People</a></li> -->
       <li><a href="query">Query (get specific data)</a></li>
-      <li><a href="contribute">Contribute</a></li>
+      <li><a href="contribute">Contribute <i class="fas fa-star"></i> </a></li>
       <li><a href="review">Review and Approve (Admin and Editors)</a></li>
   </ul>
 {% endblock %}
