--- a/app/templates/people/query.html
+++ b/app/templates/people/query.html
@@ -25,7 +25,7 @@
             <input type="submit" value="Submit"/>
         </form>
   </div>
-  <div class="data-table">
+  <div class="table-container tall-container">
       <div id="people-query-data">
         {{data|safe}}
       </div>
